<resources>
    <string name="app_name">Chatstasy-Free</string>
    <string name="app_name_free">Chatstasy-Free</string>
    <string name="action_settings">Settings</string>
    <string name="txtBigButton">Chatstasy</string>
    <string name="txtBigButton_Chatstasy">Chatstasy</string>
    <string name="txtBigButton_Free">-Free</string>
    <string name="txtTradeMarkSuperScript">&#174;</string>
    <string name="txtBigButtonPronounciation">(chats-tasi)</string>
    <string name="txtAppDescription">A Smart Way to Chat on a Smartphone</string>
    <string name="txtCopyRight">© Copyright 2018, Chatstasy, LLC</string>
    <string name="image">Image</string>
    <string name="txtThanksForInstallation">Thank you for installing Chatstasy.</string>
    <string name="txtVideoInformation">The following video will provide an overview</string>
    <string name="txtVideoInformationSecond">of this App.</string>
    <string name="txtVideoDetail">It is about 4 min long.</string>
    <string name="txtVideoPopupMessage">You can play it later from Info/FAQ.</string>
    <string name="txtEasySteps">3 EASY STEPS...</string>
    <string name="no_internet_abvailable">Network connectivity not available</string>
    <string name="txtCreateCall">CREATE CHAT BUTTON</string>
    <string name="txtCreateChatButton">Create Chat Button</string>
    <string name="txtNotifyOtherUsersTitle">NOTIFY OTHER USERS</string>
    <string name="txtSkip">SKIP</string>
    <string name="txtStep">STEP 1</string>
    <string name="txtStep2">STEP 2</string>
    <string name="txtChooseContact">Choose Contact</string>
    <string name="txtFrom">FROM</string>
    <string name="txtFavoritesList">FAVORITES LIST</string>
    <string name="txtContactList">CONTACT LIST</string>
    <string name="txtCreate">CREATE</string>
    <string name="txtNewContact">A NEW CONTACT</string>
    <string name="txtYes">Yes</string>
    <string name="txtNo">No</string>
    <string name="txtYesCap">YES</string>
    <string name="txtRegisterNowCaps">CREATE PROFILE</string>
    <string name="txtRegisterLaterCaps">CREATE LATER</string>
    <string name="txtOk">OK</string>
    <string name="txtCancel">Cancel</string>
    <string name="txtCreateContact">Create Contact</string>
    <string name="txtContactName">Contact Name</string>
    <string name="txtContactPhone">Contact Phone</string>
    <string name="txtCountryCode">Country Code</string>
    <string name="txtClickName">Click on name to change</string>
    <string name="txtNext">NEXT</string>
    <string name="private_key">93f67a51c4106072fe7548189b5f4a79</string>
    <string name="improper_response">Network issue please try after sometime</string>
    <string name="improper_response_network">Network issue please try after sometime</string>
    <string name="txtChooseImage">Choose Button Image</string>
    <string name="txtPreviousPhone">PREVIOUS PHONE DETAILS</string>
    <string name="txtGoBack">GO BACK</string>
    <string name="txtFinish">FINISH</string>
    <string name="txtUserRegistration">USER REGISTRATION</string>
    <string name="txtCreateUserProfile">USER PROFILE</string>
    <string name="txtAddPhoto">Add \nPhoto</string>
    <string name="txtUseAsDefaultImageRegistartion">Use this as my default image</string>
    <string name="txtRegistration">Please fill all below fields for Registration</string>
    <string name="txtName">Name</string>
    <string name="txtTelephoneNumber">Telephone Number</string>
    <string name="txtEmailId">E-mail Id (Optional)</string>
    <string name="txtGroupCode">Group/Promo Code(optional)</string>
    <string name="txtEmailId_mandatory">E-mail ID</string>
    <string name="txtRegister">REGISTER</string>
    <string name="txtRegistrationFeatureTitle">Please Register Your App to Enable Following Features</string>
    <string name="txtRegisterBenefitFirst">Send and receive text messages with other App users around the world! No additional carrier charges!</string>
    <string name="txtRegisterBenefitSecond">Share chat buttons with other users</string>
    <string name="txtRegisterBenefitThird">Place an emergency call to another App user</string>
    <string name="txtRegisterBenefitFourth">Create custom messages\n... and much more.</string>
    <string name="txtRegistrationVideoPopup">Would you like to see a short video on how to register?</string>
    <string name="txtPremiumFeatureTitle">Purchase Premium Version</string>
    <string name="txtRegisterBenefitFirstPremiumFeature">Restore your backups anytime</string>
    <string name="txtRegisterBenefitSecondPremiumFeature">Notify contacts of phone number changes</string>
    <string name="txtRegisterBenefitThirdPremiumFeature">Auto update phone number changes</string>
    <string name="txtRegisterBenefitFourthPremiumFeature">and many more future premium features</string>
    <string name="txtUpgradeNowMessage">DON\'T WAIT.. UPGRADE NOW AND SAVE BIG!</string>
    <string name="txtRegisterPremiumNowCaps">PURCHASE NOW</string>
    <string name="txtRegisterPremiumLaterCaps">PURCHASE LATER</string>
    <string name="txtRegisterBenefitFifth">$4.99</string>
    <string name="txtWouldYouLikeToRegister">Limited Time Early Adopter\nLife-Time License!</string>
    <string name="txtgallery">GALLERY</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="txtImageRequested">IMAGE PENDING</string>
    <string name="txtSettings">SETTINGS</string>
    <string name="txtNotification">NOTIFICATION</string>
    <string name="txtCloudBackupMenu">CLOUD BACKUP</string>
    <string name="txtConfigureMessages">CONFIGURE MESSAGES</string>
    <string name="txtElderlyModeTitle">ELDERLY MODE</string>
    <string name="txtToggleInitiation">Initiation</string>
    <string name="txtToggleResposne">Response</string>
    <string name="txtBoth">Both</string>
    <string name="txtSubmit">SUBMIT</string>
    <string name="txtBackupKey">Backup key</string>
    <string name="txtreply">Replay</string>
    <string name="txtEmergencyContact">Emergency Contact</string>
    <string name="txtLockImage">Lock Button Image</string>
    <string name="txtDefaultImage">Use this as my default image</string>
    <string name="txtReturningUser">Returning User</string>
    <string name="txtInbox">Inbox</string>
    <string name="txtCompose">Compose</string>
    <string name="txtNoMesageFound">No Mesage Found</string>
    <string name="txtNew">New</string>
    <string name="txtHintChat">Type message...</string>
    <string name="txtSend">Send</string>
    <string name="txtDelete">Delete</string>
    <string name="txtComposeMessage">COMPOSE MESSAGE</string>
    <string name="txtPleaseTypeMessage">Please Type Your Mesage</string>
    <string name="txtPleaseTypeCategoryName">Please Type Your Category Name</string>
    <string name="txtSaveMessage">SAVE MESSAGE</string>
    <string name="txtSaveCategory">SAVE CATEGORY</string>
    <string name="txtInitiation">Initiation</string>
    <string name="txtResponse">Response</string>
    <string name="txtSystemConfigMessage">System Default Messages</string>
    <string name="txtUserConfigMessage">Custom User Messages</string>
    <string name="txtNotificationCount">12</string>
    <string name="txtShow">Show</string>
    <string name="txtTo">To:</string>
    <string name="txtMessage">Message:</string>
    <string name="txtPassCode">PASSCODE</string>
    <string name="txtVerify">Verify</string>
    <string name="txt_pass_code_text">Enter Passcode:</string>
    <string name="txtCountry">Country</string>
    <string name="txtAgeGroup">Age Group</string>
    <string name="txtVerifyingRegistration">Checking User Database</string>
    <string name="txtRetry">Retry</string>
    <string name="txt_Skip">Skip</string>
    <string name="txtReplace">Replace</string>
    <string name="txtMerge">Merge</string>
    <string name="txtEditButton">Edit Button</string>
    <string name="txtSave">SAVE</string>
    <string name="txtIsdCode">International access codes</string>
    <string name="txtEmergencyNumber">Emergency Number</string>
    <string name="txtDialPad">DIALPAD</string>
    <string name="txtAccept">Accept</string>
    <string name="txtUserInfo">USER PROFILE INFO</string>
    <string name="txtUpdate">UPDATE</string>
    <string name="txtUpdateSmall">Update</string>
    <string name="txtChangNumber"><u>Change My Number</u></string>
    <string name="txtNotifyContacts"><u>Notify Contacts</u></string>
    <string name="txtInfo">INFO</string>
    <string name="txtHowToTitle">HOW TO</string>
    <string name="txtFaq">FAQ</string>
    <string name="txtContactDetails">CONTACT DETAILS</string>
    <string name="txtInternationalEmerNumber">INTERNATIONAL EMERGENCY NUMBERS</string>
    <string name="txtContactUs">CONTACT US</string>
    <string name="txtPrivacyPolicy">PRIVACY POLICY</string>
    <string name="txtAddAttachment">Add Attachment</string>
    <string name="txtPhoneNumber">Phone Number</string>
    <string name="txtContactPhones">Contact Phones</string>
    <string name="txtContactEmail">Email ID</string>
    <string name="txtPlaceCall">Place a Call</string>
    <string name="txtCreateButton">Create a Button</string>
    <string name="txtInviteToTnC">Invite to Chatstasy</string>
    <string name="txtChangeButton">Change Contact Button</string>
    <string name="tabnameHome">HOME</string>
    <string name="tabnameSettings">SETTINGS</string>
    <string name="tabnameContacts">CONTACTS</string>
    <string name="tabnameCalls">CALLS</string>
    <string name="tabnameMessages">MESSAGES</string>
    <string name="tabnameInfo">INFO</string>
    <string name="txtDeleteCaps">DELETE</string>
    <string name="txtMobileNumber">Mobile Number</string>
    <string name="txtDialingPrefix">Dialing Prefix</string>
    <string name="txtChooseFromGallery">Choose From Gallery</string>
    <string name="txtTakeNewPhoto">Take New Photo</string>
    <string name="txtRequestFromContact">Request From Contact</string>
    <string name="txtClipArt">Clip Art</string>
    <string name="txtSendProfileImage">Send Profile Image</string>
    <string name="txtClipArtTitle">CLIP ART</string>
    <string name="txtChooseButtonImageFromClipart">Choose Button Image from Clip Art</string>
    <string name="txtImageSentSuccessfullytothecontact">A request has been sent\nsuccessfully to the contact</string>
    <string name="txtAll">All</string>
    <string name="txtHowto">How to...</string>
    <string name="txtRateTheApp">Rate  the App</string>
    <string name="txtIntlEmerNumbers">International Emergency Numbers</string>
    <string name="txtShareOnSocialMedia">Share on Social Media</string>
    <string name="txtPrivacyPolicyCamelCase">Privacy Policy</string>
    <string name="txtTermsOfUseCamelCase">Terms Of Use</string>
    <string name="txtThankYouForDownload">Thank you very much for\ndownloading the App</string>
    <string name="txtTermsOfUseUnderLined"><u>Terms of Use</u></string>
    <string name="txtPrivacyPolicyUnderLined"><u>Privacy Policy</u></string>
    <string name="txtAgeConfirmation"> I am 18 years of age or over</string>
    <string name="txtParentalConsent">Parental Consent</string>
    <string name="txtParentalConsentInformation">Chatstasy takes children’s privacy seriously. In order to activate some of the premium
features of this App, you need to be 13 years of age or over. If you are younger than
13 years of age, you need to get your parent or guardian’s consent before registering
the App.</string>
    <string name="txtUnderAge">I am under 13 years of age</string>
    <string name="txtParentalConsentStatus">Parental Consent Not Received</string>
    <string name="tvParentGuardian">Parent/Guardian Email ID:</string>
</resources>