<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightTopBar" >

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:shadowColor="@color/textColorTileContact"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="0.03"
                android:text="@string/txtBigButton"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txtSizeLargeMedium" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/txtTradeMarkSuperScript"
                android:textSize="@dimen/txtSizeSmall"
                android:layout_toRightOf="@+id/tvTitle"
                android:layout_alignTop="@+id/tvTitle"
                android:layout_marginTop="@dimen/paddingButtons"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1" >

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/stripHeight"
                android:layout_weight=".65"
                android:background="@color/stripDarkBlueColor" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/stripHeight"
                android:layout_weight=".35"
                android:background="@color/stripLightBlueColor" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvThankYou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/marginTop_TextVideoInformation"
            android:gravity="center"
            android:text="@string/txtThankYouForDownload"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txtSizeMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAgreementTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/marginTop_TextVideoInformation"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txtSizeMedium"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/marginTop_TextVideoInformation"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvTermsOfUse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTermsOfUseUnderLined"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txtSizeMedium"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvPrivacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/heightTopBar"
                android:text="@string/txtPrivacyPolicyUnderLined"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txtSizeMedium"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimenMessageUserImage"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnAgeConfirmation"
                android:layout_width="@dimen/chkBoxDimenEmergencyContact"
                android:layout_height="@dimen/chkBoxDimenEmergencyContact"
                android:layout_gravity="center_vertical"
                android:background="@drawable/unchecked_white" />

            <TextView
                android:id="@+id/tvAgeConfirmation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/paddingButtons"
                android:text="@string/txtAgeConfirmation"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txtSizeMedium"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnQuestion"
                android:layout_width="@dimen/replyButtonHeight"
                android:layout_height="@dimen/replyButtonHeight"
                android:layout_marginLeft="@dimen/marginLeft"
                android:background="@drawable/question_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/marginTopText" >

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="@dimen/heightTextViewImageRequestedMessage"
                android:layout_height="@dimen/heightBtnSkip"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button_bg_delete"
                android:text="@string/txtCancel"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txtSizeMedium"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnOk"
                android:layout_width="@dimen/heightTextViewImageRequestedMessage"
                android:layout_height="@dimen/heightBtnSkip"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/heightTopBar"
                android:layout_toRightOf="@+id/btnCancel"
                android:background="@drawable/button_bg_greyed_out"
                android:text="@string/txtOk"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txtSizeMedium"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>